--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta property="og:url" content="https://todo-list-app.hostman.site/">
+        <meta property="og:type" content="Static Page" />
+        <meta property="og:site_name" content="ToDo List App" />
+        <meta property="og:title" content="ToDo List App" />
+        <meta property="og:description" content="ToDo List App">
+        <meta property="og:locale" content="en_IN" />
+        <meta property="og:image" content="https://vickygupta-5a6e.hostman.site/Images/VickyGuptaCropped.jpg">
+        <meta property="og:image:type" content="image/jpg" />
+        <meta property="og:image:width" content="240" />
+        <meta property="og:image:height" content="240" />
         <link href="Toastr/toastr.min.css" rel="stylesheet"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
