--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta property="og:title" content="ToDo List App" />
         <meta property="og:description" content="ToDo List App">
         <meta property="og:locale" content="en_IN" />
-        <meta property="og:image" content="https://vickygupta-5a6e.hostman.site/Images/VickyGuptaCropped.jpg">
+        <meta property="og:image" content="https://todo-list-app.hostman.site/Images/ToDo1.png">
         <meta property="og:image:type" content="image/jpg" />
         <meta property="og:image:width" content="240" />
         <meta property="og:image:height" content="240" />
