--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta property="og:description" content="ToDo List App">
         <meta property="og:locale" content="en_IN" />
         <meta property="og:image" content="https://todo-list-app.hostman.site/Images/ToDo1.png">
-        <meta property="og:image:type" content="image/jpg" />
+        <meta property="og:image:type" content="image/png" />
         <meta property="og:image:width" content="240" />
         <meta property="og:image:height" content="240" />
         <link href="Toastr/toastr.min.css" rel="stylesheet"/>
