--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta property="og:url" content="https://todo-list-app.hostman.site/">
+        <meta property="og:url" content="https://vickygupta16.github.io/ToDo-List-App/">
         <meta property="og:type" content="Static Page" />
         <meta property="og:site_name" content="ToDo List App" />
         <meta property="og:title" content="ToDo List App" />
         <meta property="og:description" content="ToDo List App">
         <meta property="og:locale" content="en_IN" />
-        <meta property="og:image" content="https://todo-list-app.hostman.site/Images/ToDo1.png">
+        <meta property="og:image" content="https://vickygupta16.github.io/ToDo-List-App/Images/ToDo1.png">
         <meta property="og:image:type" content="image/png" />
         <meta property="og:image:width" content="240" />
         <meta property="og:image:height" content="240" />
